examples/test/testpolicy12006.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12006
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key5: value1
      key36: value34
      key8: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value20
      podSelector:
        matchLabels:
          key16: value35
          key24: value43
